infrastructure/gatekeeper/tests/verifydeprecatedapi/pass.yaml
apiVersion: flowcontrol.apiserver.k8s.io/v1beta3
kind: FlowSchema
metadata:
  name: allowed-flowschema
spec:
  matchingPrecedence: 1000
  priorityLevelConfiguration:
    name: exempt
  rules:
    - nonResourceRules:
        - nonResourceURLs:
            - "/healthz"
          verbs:
            - "*"
      subjects:
        - kind: Group
          name: system:unauthenticated
